# gfatk

./: Cargo.toml
src/: SSC.rs  lib.rs  main.rs  stats.rs  trim.rs  utils.rs
src/gfa/: gfa.rs  graph.rs
